feat: add cleanup step for existing files in Azure pipeline deployment

--- a/azurePipeline.yml
+++ b/azurePipeline.yml
@@ -31,6 +31,9 @@ steps:
       # Enable static website hosting
       az storage blob service-properties update --account-name $(storageAccountName) --static-website --index-document index.html --404-document index.html
 
+      # Clean up existing files in the $web container
+      az storage blob delete-batch --source '$web' --account-name $(storageAccountName)
+
       # Upload files
       az storage blob upload-batch -d '$web' -s $(buildDir) --account-name $(storageAccountName)
   displayName: 'Deploy to Azure Storage'
